feat: add rows on keyboard and function createbuttons

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,3 +10,6 @@
 @import url(../blocks/footer/footer.css);
 
 @import url(../blocks/keyboard/keyboard.css);
+@import url(../blocks/keyboard/__row/keyboard__row.css);
+@import url(../blocks/keyboard/__btn/keyboard__btn.css);
+@import url(../blocks/keyboard/__btn/_backspace/keyboard__btn_type_backspace.css);
