--- a/blocks/keyboard/keyboard.css
+++ b/blocks/keyboard/keyboard.css
@@ -2,4 +2,9 @@
   width: 70%;
   height: 60vh;
   border: 1px solid blue;
+  border-radius: 10px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
