feat: add export/import and change languages

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,3 +13,8 @@
 @import url(../blocks/keyboard/__row/keyboard__row.css);
 @import url(../blocks/keyboard/__btn/keyboard__btn.css);
 @import url(../blocks/keyboard/__btn/_backspace/keyboard__btn_type_backspace.css);
+
+.btn {
+  height: 20px;
+  width: 50px;
+}
