--- a/blocks/keyboard/keyboard.css
+++ b/blocks/keyboard/keyboard.css
@@ -1,11 +1,12 @@
 .keyboard {
   width: 70%;
   height: 60vh;
-  border: 1px solid blue;
+  border: 2px solid black;
   border-radius: 10px;
   margin-top: 10px;
   display: flex;
   flex-direction: column;
   gap: 5px;
   padding: 5px;
+  background-color: silver;
 }
