fix: capslock work and add text on page

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,13 @@
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__title/header__title.css);
 
 @import url(../blocks/main/main.css);
 @import url(../blocks/main/__text/main__text.css);
 
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__text/footer__text.css);
 
 @import url(../blocks/keyboard/keyboard.css);
 @import url(../blocks/keyboard/__row/keyboard__row.css);
@@ -18,7 +20,4 @@
 @import url(../blocks/keyboard/__btn/_small/keyboard__btn_size_small.css);
 @import url(../blocks/keyboard/__btn/_active/keyboard__btn_active.css);
 @import url(../blocks/keyboard/__btn/_keydown/keyboard__btn_type_keydown.css);
-
-.open {
-  background-color: yellow;
-}
+@import url(../blocks/keyboard/__btn/_capslock/keyboard__btn_type_capslock.css);
